--- a/config/X86/x86-extra.config
+++ b/config/X86/x86-extra.config
@@ -617,3 +617,6 @@ CONFIG_PACKAGE_libplist-utils=y
 CONFIG_PACKAGE_libusbmuxd-utils=y
 CONFIG_PACKAGE_usbmuxd=y
 CONFIG_PACKAGE_libudev-fbsd=y
+
+# Networking
+CONFIG_PACKAGE_libuhttpd-wolfssl=y
